--- a/css/estilos.css
+++ b/css/estilos.css
@@ -28,6 +28,7 @@ header {
   color: white;
   padding: 1rem;
   overflow-y: auto;
+  transition: width 0.3s ease;
 }
 
 .menu-lateral h2 {
@@ -71,4 +72,13 @@ header {
   height: 100%;
   border: none;
   border-radius: 5px;
+}
+
+.button_footer{
+    background-color: #16a085;
+    width: 20px;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    z-index: 9999;
 }
